added some content to aboutMe.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</header>
 		
 		
-		<p><img src="imgOfMe.jpg" alt="Picture of Paul Townshend" width="422" height="750" class="center"</p>
+		<p><img src="images/imgOfMe.jpg" alt="Picture of Paul Townshend" width="422" height="750" class="center"</p>
 		<p style="text-align:center"><a href="https://mattm401.github.io/"> Course Website</a></p>
 		
 	</body>
