--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,4 +1,34 @@
 <!DOCTYPE>
-<html>
+<html lang="en-US">
 	<head>
-	
+		<title>About Me</title>
+		<meta charset="utf-8">
+		<style>
+			h1 {text-align:center}
+			h2 {text-align:center}
+			p {text-align:center;}
+			
+			.center {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+				width: 50%;
+			}
+		</style>
+	</head>
+	<body>
+		<h1><u>About Me</u></h1>
+		<p>I am a Senior Computer Science student with a concentration in front-end development and UI</p>
+		<p> Fun Fact: I produce music! Check out my most recent project with my good friend BariBlano (who is also a student here at UD) linked below!</p>
+		<a href="https://distrokid.com/hyperfollow/bariblanco/something-for-the-summer"
+				target="_blank" rel="noreferrer noopener"><img src="images/sfts.png" alt="Something for the Summer by BariBlanco" class="center"</a>
+		<p>All of my other music can be found  <a href="https://linktr.ee/prod.ptown">here</a>
+		</p>
+		
+		<p>I also make art!</p>
+		
+		
+		<footer><h2><a href="index.html">Back</a></h2></footer>
+		
+	</body>
+</html>
