Made code more readable, updated formatting and indenting, added web development interests

--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<title>Personal Website 1</title>
-		<meta charset="utf-8">
-		<style>
-			.center {
-				display: block;
-				margin-left: auto;
-				margin-right: auto;
-				width: 50%;
-			}
-		</style>
-	</head>
-	<body>
-		<header>
-			<section>
-			<h1 style="text-align:center"><a href="aboutMe.html">Paul Townshend</a></h1>
-				<nav>
-					<button style="float:right">Next Student</button>
-					<button style="float:left">Previous Student</button>
-				</nav>
-			</section>
-		</header>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA_Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<title>Personal Website 1</title>
+	
+	<style>
+		h1 {text-align: center}
+		h2 {text-align: center}
+		p {text-align: center}
+		.center {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 50%;
+		}
 		
+	</style>
+</head>
+<body>
+	<div id="container" style="height:auto; margin:0 auto; width:50%;">
+		<h1><!-- Paul Townshend, CISC474
+			Personal Webpage 1, paultown@udel.edu -->
+			<a href="aboutMe.html">Paul Townshend</a></h1>
+			<nav>
+				<button style="float:right">Next Student</button>
+				<button style="float:left">Previous Student</button>
+			</nav>
+			<h2><u>Web Development Interests</u></h2>
+			<div class="page" style="width:25%; text-align:justify; margin:0 auto;">
+				<ul>
+					<li>Graphics</li>
+					<li>UI Design</li>
+					<li>Human Interaction</li>
+				</ul>
+			</div>
+		<h1>
+	</div>
+	<p><img src="images/imgOfMe.jpg" alt="Picture of Paul Townshend" width="422" height="750" class="center"</p>
+	<p><a href="https://mattm401.github.io/"> Course Website</a></p>
 		
-		<p><img src="images/imgOfMe.jpg" alt="Picture of Paul Townshend" width="422" height="750" class="center"</p>
-		<p style="text-align:center"><a href="https://mattm401.github.io/"> Course Website</a></p>
-		
-	</body>
+</body>
 </html>
