fixed hhyperlinks, added artwork, fixed picture sizing

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,37 +1,59 @@
 <!DOCTYPE>
 <html lang="en-US">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA_Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>About Me</title>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA_Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>About Me</title>
 		
-	<style>
-		h1 {text-align:center}
-		p {text-align:center;}
+		<style>
+			h1 {text-align:center;}
+			p {text-align:center;}
 			
-		.center {
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-			width: 50%;
-		}
-	</style>
-</head>
-<body>
-	<div id="container" style="height:auto; margin:0 auto; width:75%;">
-		<h1><u>About Me</u></h1>
-		<p>I am a Senior Computer Science student with a concentration in front-end development and UI</p>
-		<p> Fun Fact: I produce music! Check out my most recent project with my good friend BariBlano (who is also a student here at UD) linked below!</p>
-		<a href="https://distrokid.com/hyperfollow/bariblanco/something-for-the-summer"
-			target="_blank" rel="noreferrer noopener"><img src="images/sfts.png" alt="Something for the Summer by BariBlanco" class="center"</a>
-		<p>All of my other music can be found  <a href="https://linktr.ee/prod.ptown">here</a>
-		</p>
+			.center {
+				display: flex;
+				margin-left: auto;
+				margin-right: auto;
+				width: 50%;
+			}
+			
+			.center2 {
+				display: flex;
+				width: 85%;
+				padding: 1em;
+			}
+			
+		</style>
+	</head>
+	<body>
+		<div id="container" style="height:auto; margin:0 auto; width:75%;">
+			<h1><u>About Me</u></h1>
+			<p>I am a Senior Computer Science student with a concentration in front-end development and UI</p>
+			<p> Fun Fact: I produce music! Check out my most recent project with my good friend BariBlano (who is also a student here at UD) linked below!</p>
+			<a href="https://distrokid.com/hyperfollow/bariblanco/something-for-the-summer"
+				target="_blank" rel="noreferrer noopener">
+				<img src="images/sfts.png" alt="Something for the Summer by BariBlanco" class="center">
+			</a>
+			<p>All of my other music can be found  <a href="https://linktr.ee/prod.ptown">here</a></p>
 		
-		<p>I also make art!</p>
-		
-		
-		<footer><h1><a href="index.html">Back</a></h1></footer>
-	</div>	
-</body>
+			<p>I also make art!</p>
+			<table>
+				<tr>
+					<td> <img src="images/art1.png" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art2.png" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art3.png" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art4.png" alt="art by Paul Townshend" class="center2"> </td>
+				</tr>
+				<tr>
+					<td> <img src="images/art5.png" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art6.png" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art7.png" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art8.png" alt="art by Paul Townshend" class="center2"> </td>
+				</tr>
+			</table>
+			<h1><a href="index.html">Back</a></h1>
+			</br>
+			</br>
+		</div>	
+	</body>
 </html>
