--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		h2 {text-align: center}
 		p {text-align: center}
 		.center {
-			display: block;
+			display: flex;
 			margin-left: auto;
 			margin-right: auto;
-			width: 50%;
+			width: 25%;
 		}
 		
 	</style>
@@ -39,7 +39,7 @@
 			</div>
 		<h1>
 	</div>
-	<p><img src="images/imgOfMe.jpg" alt="Picture of Paul Townshend" width="422" height="750" class="center"</p>
+	<p><img src="images/imgOfMe.jpg" alt="Picture of Paul Townshend" class="center"</p>
 	<p><a href="https://mattm401.github.io/"> Course Website</a></p>
 		
 </body>
