fixed image file extensions for github pages

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -32,23 +32,23 @@
 			<p> Fun Fact: I produce music! Check out my most recent project with my good friend BariBlano (who is also a student here at UD) linked below!</p>
 			<a href="https://distrokid.com/hyperfollow/bariblanco/something-for-the-summer"
 				target="_blank" rel="noreferrer noopener">
-				<img src="images/sfts.png" alt="Something for the Summer by BariBlanco" class="center">
+				<img src="images/sfts.PNG" alt="Something for the Summer by BariBlanco" class="center">
 			</a>
 			<p>All of my other music can be found  <a href="https://linktr.ee/prod.ptown">here</a></p>
 		
 			<p>I also make art!</p>
 			<table>
 				<tr>
-					<td> <img src="images/art1.png" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art2.png" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art3.png" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art4.png" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art1.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art2.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art3.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art4.PNG" alt="art by Paul Townshend" class="center2"> </td>
 				</tr>
 				<tr>
-					<td> <img src="images/art5.png" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art6.png" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art7.png" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art8.png" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art5.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art6.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art7.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="images/art8.PNG" alt="art by Paul Townshend" class="center2"> </td>
 				</tr>
 			</table>
 			<h1><a href="index.html">Back</a></h1>
