--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 		<h1>
 	</div>
-	<p><img src="images/imgOfMe.jpg" alt="Picture of Paul Townshend" class="center"</p>
+	<p><img src="images/imgOfMe.JPG" alt="Picture of Paul Townshend" class="center"</p>
 	<p><a href="https://mattm401.github.io/"> Course Website</a></p>
 		
 </body>
