fixed typos and added line breaks

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 		<h1>
 	</div>
 	<p><img src="./images/imgOfMe.JPG" alt="Picture of Paul Townshend" class="center"</p>
-	<p><a href="https://mattm401.github.io/"> Course Website</a></p>
+	<h1><a href="https://mattm401.github.io/"> Course Website</a></h1>
+	</br>
+	</br>
 		
 </body>
 </html>
