--- a/aboutMe.html
+++ b/aboutMe.html
@@ -29,26 +29,26 @@
 		<div id="container" style="height:auto; margin:0 auto; width:75%;">
 			<h1><u>About Me</u></h1>
 			<p>I am a Senior Computer Science student with a concentration in front-end development and UI</p>
-			<p> Fun Fact: I produce music! Check out my most recent project with my good friend BariBlano (who is also a student here at UD) linked below!</p>
+			<p> Fun Fact: I produce music! Check out my most recent project with my good friend BariBlanco (who is also a student here at UD) linked below!</p>
 			<a href="https://distrokid.com/hyperfollow/bariblanco/something-for-the-summer"
 				target="_blank" rel="noreferrer noopener">
-				<img src="images/sfts.PNG" alt="Something for the Summer by BariBlanco" class="center">
+				<img src="./images/sfts.PNG" alt="Something for the Summer by BariBlanco" class="center">
 			</a>
-			<p>All of my other music can be found  <a href="https://linktr.ee/prod.ptown">here</a></p>
+			<p>All of my other music can be found  <a href="https://linktr.ee/prod.ptown" target="_blank" rel="noreferrer noopener">here</a></p>
 		
 			<p>I also make art!</p>
 			<table>
 				<tr>
-					<td> <img src="images/art1.PNG" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art2.PNG" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art3.PNG" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art4.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="./images/art1.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="./images/art2.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="./images/art3.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="./images/art4.PNG" alt="art by Paul Townshend" class="center2"> </td>
 				</tr>
 				<tr>
-					<td> <img src="images/art5.PNG" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art6.PNG" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art7.PNG" alt="art by Paul Townshend" class="center2"> </td>
-					<td> <img src="images/art8.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="./images/art5.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="./images/art6.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="./images/art7.PNG" alt="art by Paul Townshend" class="center2"> </td>
+					<td> <img src="./images/art8.PNG" alt="art by Paul Townshend" class="center2"> </td>
 				</tr>
 			</table>
 			<h1><a href="index.html">Back</a></h1>
