--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,8 +19,21 @@
 			
 			.center2 {
 				display: flex;
-				width: 85%;
+				width: 87%;
 				padding: 1em;
+			}
+			
+			.button {
+			<!-- found at https://stackoverflow.com/questions/710089/how-do-i-make-an-html-link-look-like-a-button -->
+			font: bold 11px Arial;
+			text-decoration: none;
+			background-color: #EEEEEE;
+			color: #333333;
+			padding: 2px 6px 2px 6px;
+			border-top: 1px solid #CCCCCC;
+			border-right: 1px solid #333333;
+			border-bottom: 1px solid #333333;
+			border-left: 1px solid #CCCCCC;
 			}
 			
 		</style>
@@ -51,7 +64,7 @@
 					<td> <img src="./images/art8.PNG" alt="art by Paul Townshend" class="center2"> </td>
 				</tr>
 			</table>
-			<h1><a href="index.html">Back</a></h1>
+			<h1><a href="index.html" class="button">Back</a></h1>
 			</br>
 			</br>
 		</div>	
