fixed errors for validation

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -24,7 +24,7 @@
 			}
 			
 			.button {
-			<!-- found at https://stackoverflow.com/questions/710089/how-do-i-make-an-html-link-look-like-a-button -->
+			/* found at https://stackoverflow.com/questions/710089/how-do-i-make-an-html-link-look-like-a-button */
 			font: bold 11px Arial;
 			text-decoration: none;
 			background-color: #EEEEEE;
