--- a/index.html
+++ b/index.html
@@ -2,26 +2,24 @@
 <html lang="en-US">
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA_Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>Personal Website 1</title>
 	
 	<style>
-		h1 {text-align: center}
-		h2 {text-align: center}
-		p {text-align: center}
+		h1 {text-align: center;}
+		h2 {text-align: center;}
+		p {text-align: center;}
 		.center {
 			display: flex;
 			margin-left: auto;
 			margin-right: auto;
 			width: 25%;
 		}
-		
+			
 		.button {
-			<!-- found at https://stackoverflow.com/questions/710089/how-do-i-make-an-html-link-look-like-a-button -->
+			/* found at https://stackoverflow.com/questions/710089/how-do-i-make-an-html-link-look-like-a-button */
 			font: bold 11px Arial;
-			text-decoration: none;
 			background-color: #EEEEEE;
 			color: #333333;
 			padding: 2px 6px 2px 6px;
@@ -30,18 +28,17 @@
 			border-bottom: 1px solid #333333;
 			border-left: 1px solid #CCCCCC;
 		}
-		
 	</style>
 </head>
 <body>
-	<div id="container" style="height:auto; margin:0 auto; width:50%;">
+		<div id="container" style="height:auto; margin:0 auto; width:50%;">
 		<h1><!-- Paul Townshend, CISC474
 			Personal Webpage 1, paultown@udel.edu -->
 			<a href="aboutMe.html">Paul Townshend</a></h1>
 			<div>
 				<nav>
 					<a href="https://jt1018.github.io/" style="float:left" class="button">Previous Student</a>
-					<a href="https://bluehenraj.github.io/" style="float:right"class="button">Next Student</a>
+					<a href="https://bluehenraj.github.io/" style="float:right" class="button">Next Student</a>
 				</nav>
 			</div>
 			<h2><u>Web Development Interests</u></h2>
@@ -52,12 +49,11 @@
 					<li>Human-Computer Interaction</li>
 				</ul>
 			</div>
-		<h1>
 	</div>
-	<p><img src="./images/imgOfMe.JPG" alt="Picture of Paul Townshend" class="center"</p>
+	<p><img src="./images/imgOfMe.JPG" alt="Picture of Paul Townshend" class="center"></p>
 	<h1><a href="https://mattm401.github.io/"> Course Website</a></h1>
-	</br>
-	</br>
+	<br>
+	<br>
 		
 </body>
 </html>
