fixed errors for validator on aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,8 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA_Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>About Me</title>
 		
@@ -65,8 +64,8 @@
 				</tr>
 			</table>
 			<h1><a href="index.html" class="button">Back</a></h1>
-			</br>
-			</br>
+			<br>
+			<br>
 		</div>	
 	</body>
 </html>
