fully functional contact form

--- a/html/contactMe.html
+++ b/html/contactMe.html
@@ -63,15 +63,12 @@
                     <p id="email_error" class="error">Please enter a valid email address</p>
                     <input type="text" placeholder="xxx-xxx-xxxx" id="user_phone" class="field"/>
                     <p id="phone_error" class="error">Please enter a valid phone number in the specified format</p>
-                    <textarea rows="4" placeholder="Enter your message" id="message" class="field" ></textarea>
-                    <p id="message_error" class="error">Please enter a message</p>
-                    <br>      
+                    <textarea rows="4" placeholder="Enter your message" id="user_message" class="field" ></textarea>
+                    <p id="message_error" class="error">Please enter a message</p>    
 					<input type="submit" value="Send"/>
                 </form>
             </div>
         </div>
     </div>
-    
-    
 </body>
 </html>
