fixed validation errors for aboutMe.html

--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -29,23 +29,23 @@
 				<p> Fun Fact: I produce music! Check out my most recent project with my good friend BariBlanco (who is also a student here at UD) linked below!</p>
 				<a href="https://distrokid.com/hyperfollow/bariblanco/something-for-the-summer"
 					target="_blank" rel="noreferrer noopener">
-					<img src="../images/sfts.PNG" alt="Something for the Summer by BariBlanco" class="center" id="art">
+					<img src="../images/sfts.PNG" alt="Something for the Summer by BariBlanco" class="art">
 				</a>
 				<p>All of my other music can be found  <a href="https://linktr.ee/prod.ptown" target="_blank" rel="noreferrer noopener">here</a></p>
 		
 				<p>I also make art!</p>
-				<table id="art">
+				<table>
 					<tr>
-						<td> <img src="../images/art1.PNG" alt="art by Paul Townshend" id="art"> </td>
-						<td> <img src="../images/art2.PNG" alt="art by Paul Townshend" id="art"> </td>
-						<td> <img src="../images/art3.PNG" alt="art by Paul Townshend" id="art"> </td>
-						<td> <img src="../images/art4.PNG" alt="art by Paul Townshend" id="art"> </td>
+						<td> <img src="../images/art1.PNG" alt="art by Paul Townshend" class="art"> </td>
+						<td> <img src="../images/art2.PNG" alt="art by Paul Townshend" class="art"> </td>
+						<td> <img src="../images/art3.PNG" alt="art by Paul Townshend" class="art"> </td>
+						<td> <img src="../images/art4.PNG" alt="art by Paul Townshend" class="art"> </td>
 					</tr>
 					<tr>
-						<td> <img src="../images/art5.PNG" alt="art by Paul Townshend" id="art"> </td>
-						<td> <img src="../images/art6.PNG" alt="art by Paul Townshend" id="art"> </td>
-						<td> <img src="../images/art7.PNG" alt="art by Paul Townshend" id="art"> </td>
-						<td> <img src="../images/art8.PNG" alt="art by Paul Townshend" id="art"> </td>
+						<td> <img src="../images/art5.PNG" alt="art by Paul Townshend" class="art"> </td>
+						<td> <img src="../images/art6.PNG" alt="art by Paul Townshend" class="art"> </td>
+						<td> <img src="../images/art7.PNG" alt="art by Paul Townshend" class="art"> </td>
+						<td> <img src="../images/art8.PNG" alt="art by Paul Townshend" class="art"> </td>
 					</tr>
 				</table>
 				<br>
