attempt at fixing github pages

--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -13,9 +13,9 @@
 				Paul Townshend</h1>
 				<nav>
 					
-					<a href="index.html" class="button">Home</a>
-					<a href="aboutMe.html" class="button">About Me</a>
-					<a href="contactMe.html" class="button">Contact Me</a>
+					<a href="../html/index.html" class="button">Home</a>
+					<a href="../html/aboutMe.html" class="button">About Me</a>
+					<a href="../html/contactMe.html" class="button">Contact Me</a>
 					<a href="https://mattm401.github.io/" class="button"> Course Website</a>
 					<a href="https://jt1018.github.io/" class="button">Previous Student</a>
 					<a href="https://bluehenraj.github.io/" class="button">Next Student</a>
