--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 		<title>Personal Website 1</title>
 	
-		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="../personalWebsite/css/styles.css">
 		
 	</head>
 	<body>
@@ -15,9 +15,9 @@
 				Personal Webpage 1, paultown@udel.edu -->
 				Paul Townshend</h1>
 				<nav>
-					<a href="index.html" class="button">Home</a>
-					<a href="aboutMe.html" class="button">About Me</a>
-					<a href="contactMe.html" class="button">Contact Me</a>
+					<a href="../personalWebsite/index.html" class="button">Home</a>
+					<a href="../personalWebsite/html/aboutMe.html" class="button">About Me</a>
+					<a href="../personalWebsite/html/contactMe.html" class="button">Contact Me</a>
 					<a href="https://mattm401.github.io/" class="button"> Course Website</a>
 					<a href="https://jt1018.github.io/" class="button">Previous Student</a>
 					<a href="https://bluehenraj.github.io/" class="button">Next Student</a>				
