changed image link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 		<div id="page">
 			<div style="display: inline-block; padding:1rem">
-				<img src="../images/imgOfMe.JPG" alt="Picture of Paul Townshend" class="imgOfMe">
+				<img src="/images/imgOfMe.JPG" alt="Picture of Paul Townshend" class="imgOfMe">
 			</div>
 			<div id="parent">
 					<div id="list">
