--- a/html/aboutMe.html
+++ b/html/aboutMe.html
@@ -4,53 +4,55 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>About Me</title>
-		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="../css/master.css">
+		<link rel="stylesheet" href="../css/splash.css">
 	</head>
 	<body>
-		<div id="header">
-			<h1><!-- Paul Townshend, CISC474
-				Personal Webpage 1, paultown@udel.edu -->
-				Paul Townshend</h1>
-				<nav>
-					
-					<a href="../html/index.html" class="button">Home</a>
-					<a href="../html/aboutMe.html" class="button">About Me</a>
-					<a href="../html/contactMe.html" class="button">Contact Me</a>
-					<a href="https://mattm401.github.io/" class="button"> Course Website</a>
-					<a href="https://jt1018.github.io/" class="button">Previous Student</a>
-					<a href="https://bluehenraj.github.io/" class="button">Next Student</a>
-					
-				</nav>
+		<div class="header">
+			<div id="splash-nav">
+				<!--<h1> Paul Townshend, CISC474
+					Personal Webpage 1, paultown@udel.edu 
+					Paul Townshend
+				</h1> -->
+					<ul class="nav">
+						<a href="../index.html" class="nav-link">>Home</a>
+						<a href="./aboutMe.html" class="nav-link">>Art</a>
+						<a href="./contactMe.html" class="nav-link">>Contact Me</a>
+						<div class="dropdown">
+							<a class="nav-link">>Class Links</a>
+							<div class="dropdown-links">
+								<a href="https://mattm401.github.io/">Course Website</a>
+								<a href="https://jt1018.github.io/">Previous Student</a>
+								<a href="https://bluehenraj.github.io/">Next Student</a>
+							</div>
+						</div>
+					</ul>
+				</div>
 		</div>
-		<div id="parent" style="text-align: center;">
-			<div style="width: 75%;">
-				<h1><u>About Me</u></h1>
-				<p>I am a Senior Computer Science student with a concentration in front-end development and UI</p>
-				<p> Fun Fact: I produce music! Check out my most recent project with my good friend BariBlanco (who is also a student here at UD) linked below!</p>
-				<a href="https://distrokid.com/hyperfollow/bariblanco/something-for-the-summer"
-					target="_blank" rel="noreferrer noopener">
-					<img src="../images/sfts.PNG" alt="Something for the Summer by BariBlanco" class="art">
-				</a>
-				<p>All of my other music can be found  <a href="https://linktr.ee/prod.ptown" target="_blank" rel="noreferrer noopener">here</a></p>
-		
-				<p>I also make art!</p>
-				<table>
-					<tr>
-						<td> <img src="../images/art1.PNG" alt="art by Paul Townshend" class="art"> </td>
-						<td> <img src="../images/art2.PNG" alt="art by Paul Townshend" class="art"> </td>
-						<td> <img src="../images/art3.PNG" alt="art by Paul Townshend" class="art"> </td>
-						<td> <img src="../images/art4.PNG" alt="art by Paul Townshend" class="art"> </td>
-					</tr>
-					<tr>
-						<td> <img src="../images/art5.PNG" alt="art by Paul Townshend" class="art"> </td>
-						<td> <img src="../images/art6.PNG" alt="art by Paul Townshend" class="art"> </td>
-						<td> <img src="../images/art7.PNG" alt="art by Paul Townshend" class="art"> </td>
-						<td> <img src="../images/art8.PNG" alt="art by Paul Townshend" class="art"> </td>
-					</tr>
-				</table>
-				<br>
-				<br>
-			</div>	
+		<div id="page" class="row">
+			<div class="space2"></div>
+			<div class="space2"></div>
+			<div class="left-art-col">
+				<img src="../images/art1.PNG" alt="art by Paul Townshend" class="art">
+				<img src="../images/art2.PNG" alt="art by Paul Townshend" class="art">
+				<img src="../images/art3.PNG" alt="art by Paul Townshend" class="art">
+				<img src="../images/art4.PNG" alt="art by Paul Townshend" class="art">			
+			</div>
+			<div class="right-art-col">
+				<img src="../images/art5.PNG" alt="art by Paul Townshend" class="art">
+				<img src="../images/art6.PNG" alt="art by Paul Townshend" class="art">	
+				<img src="../images/art7.PNG" alt="art by Paul Townshend" class="art"> 
+				<img src="../images/art8.PNG" alt="art by Paul Townshend" class="art"> 	
+			</div>
+		</div>
+		<br>
+		<br>
+		<div class="footer">
+			<div class="icons">
+				<a href="https://twitter.com/ptown__" target="_blank" rel="noreferrer noopener"><img src="../images/twitter_icon.png"></a>
+				<a href="https://twitter.com/ptown__" target="_blank" rel="noreferrer noopener"><img src="../images/Instagram_icon.png"></a>
+			</div>
+			<p>Copyright 2021 © Paul Townshend</p>
 		</div>
 	</body>
 </html>
